--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <img id="imgToProcess" class="img-processed" src="test.jpg">
                     </div>
                 </div>
-                <div class="d-none col-md-6 p-y mt-0 px-0" id="textShown">
+                <div class="d-none col-md-6 p-y mt-0 px-0 " id="textShown">
                     <div class="d-flex justify-content-end align-items-end">
                             <div class="download-container p-1">
                                 <button class="btn-document mx-1"> <i class="fa-solid fa-file-pdf"></i> PDF</button>
@@ -91,7 +91,7 @@
                             </div>
                            
                     </div>
-                    <p class="text-result p-2" id="textResult"></p>
+                    <div class="text-result p-2" id="textResult"></div>
                     
                 </div>
         </div>
