--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                <span id="file-upload-btn" class="button_drag">SELECT FILE OR DRAG A FILE HERE</span>
               </label>
             </div>
-            <div class="col-md-6 parameter-container">
+            <div class="col-md-6 ">
+                <div class="parameter-container">
                     <h5><i class="fa-solid fa-gear"> </i> Process settings</h5>
                     <div class="d-flex justify-content-between mt-3">
                         <div>
@@ -60,10 +61,11 @@
                             </select>
                         </div>
                         <div class="">
-                            <button class="btn-type" onclick="activeBtn('hand')" id="handwritten">HANDWRITTEN</button>
-                            <button class="btn-type" onclick="activeBtn('print')" id="print">PRINT</button>
+                            <button class="btn-type mb-1" onclick="activeBtn('hand')" id="handwritten">HANDWRITTEN</button>
+                            <button class="btn-type mb-1" onclick="activeBtn('print')" id="print">PRINT</button>
                         </div>
                     </div>
+                </div>   
             </div>
         </div>
         <div class="row process-container p-0">
